test/descriptor/seman/describes_int00.v3
//@seman = DescriptorError @ 2:19
class D describes int { } // error
class A descriptor D { } // error, shouldn't crash
